[package]
name = "calc-worktime"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true